app/components/custom-html.module.css
.formattedContent a {
  color: rgb(0 0 0 / 0.7);
  text-decoration: underline;
  font-weight: 600;
  transition: color 0.2s ease;
}

.formattedContent p {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.formattedContent p:first-child {
  margin-top: 0;
}

.formattedContent p:last-child {
  margin-bottom: 0;
}

.formattedContent code {
  background-color: rgba(122, 98, 98, 0.1);
  padding: 0.25rem 0.5rem;
  border-radius: 0.375rem;
  font-size: 85%;
  font-weight: 500;
  color: rgb(220, 38, 38);
}

.formattedContent table {
  border-collapse: separate;
  border-spacing: 0.25rem;
}

.formattedContent td,
.formattedContent th {
  padding: 0.25rem;
}

